force-app/main/default/objects/PC_Chat_Push_Event__c/fields/ChatSentByFullName__c.field-meta.xml
<CustomField>
    <fullName>ChatSentByFullName__c</fullName>
    <description>Name of the person who sent the Chat. Not wanting to make this a lookup to avoid locking.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>ChatSentByFullName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>