force-app/main/default/objects/PC_Chat_Push_Event__c/fields/ChatSentById__c.field-meta.xml
<CustomField>
    <fullName>ChatSentById__c</fullName>
    <description>Id of the person who sent the Chat</description>
    <encryptionScheme>None</encryptionScheme>
    <label>ChatSentById</label>
    <length>30</length>
    <type>Text</type>
</CustomField>