force-app/main/default/objects/PC_Chat_Push_Event__c/fields/closedBy__c.field-meta.xml
<CustomField>
    <fullName>closedBy__c</fullName>
    <description>Indicates who the PC Chat Session was closed by. (Full Name)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>closedBy</label>
    <length>80</length>
    <type>Text</type>
</CustomField>