force-app/main/default/objects/PC_Chat_Push_Event__c/fields/hasSpecialistEnteredChat__c.field-meta.xml
<CustomField>
    <fullName>hasSpecialistEnteredChat__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if a specialist has initially entered the chat.</description>
    <label>hasSpecialistEnteredChat</label>
    <type>Checkbox</type>
</CustomField>