force-app/main/default/objects/PC_Chat_Push_Event__c/fields/isClosed__c.field-meta.xml
<CustomField>
    <fullName>isClosed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the PC Chat Session is closed.</description>
    <label>isClosed</label>
    <type>Checkbox</type>
</CustomField>