force-app/main/default/objects/PC_Chat_Push_Event__c/fields/Random_Gen__c.field-meta.xml
<CustomField>
    <fullName>Random_Gen__c</fullName>
    <description
    >Used to generate random characters so the push topic will trigger. The PT will not trigger if two messages are sent with the same value. This will mitigate.</description>
    <label>Random_Gen</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>